--- a/css/style.css
+++ b/css/style.css
@@ -293,10 +293,10 @@ body {
 
 @media screen and (max-width: 550px) {
   p {
-    font-size: 24px;
+    font-size: 20px;
   }
   .img-project {
-    max-width: 250px !important;
+    max-width: 240px !important;
   }
   .container-item:nth-child(2) {
     margin: 40px 0px;
